WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
226214
App Highlight visibility not toggled when created
https://bugs.webkit.org/show_bug.cgi?id=226214
Summary
App Highlight visibility not toggled when created
mmokary
Reported
2021-05-24 23:57:37 PDT
App Highlight visibility is not toggled when one is created if the highlight observer has not already been initialized by other means.
Attachments
Patch
(1.47 KB, patch)
2021-05-25 00:11 PDT
,
mmokary
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mmokary
Comment 1
2021-05-25 00:11:33 PDT
Created
attachment 429633
[details]
Patch
Wenson Hsieh
Comment 2
2021-05-25 08:27:38 PDT
rdar://78173370
EWS
Comment 3
2021-05-25 08:31:56 PDT
Committed
r278009
(
238122@main
): <
https://commits.webkit.org/238122@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 429633
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug