Cherry-pick r278009. rdar://problem/78463104

Ensure app highlight visibility observer is initialized before adding a new highlight
    https://bugs.webkit.org/show_bug.cgi?id=226214
    rdar://78173370

    Patch by Matt Mokary <mmokary@apple.com> on 2021-05-25
    Reviewed by Wenson Hsieh.

    The app highlight visibility observer is initialized before restoring highlights, but was not initialized
    before adding a new one. It must be initialized before adding a highlight so a change in visibility resulting
    from a new highlight is handled correct.

    * UIProcess/Cocoa/WebPageProxyCocoa.mm:
    (WebKit::WebPageProxy::createAppHighlightInSelectedRange):

    Canonical link: https://commits.webkit.org/238122@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278009 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/237696.43@safari-612.1.15.1-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-612.1.15.1-branch@278052 268f45cc-cd09-0410-ab3c-d52691b4dbfc